force-app/main/default/objects/TASKRAY__Project__c/TASKRAY__Project__c.object-meta.xml
<CustomObject>
    <description>This is the primary TaskRay object for projects.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <label>TaskRay Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>