force-app/main/default/objects/TASKRAY__Project__c/fields/AccountsIndustry__c.field-meta.xml
<CustomField>
    <fullName>AccountsIndustry__c</fullName>
    <formula>TEXT( TASKRAY__trAccount__r.Industry )</formula>
    <label>Account&#39;s Industry</label>
    <type>Text</type>
</CustomField>