force-app/main/default/objects/TASKRAY__Project__c/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <label>Address Line 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>