force-app/main/default/objects/TASKRAY__Project__c/fields/BooktoBillDuration__c.field-meta.xml
<CustomField>
    <fullName>BooktoBillDuration__c</fullName>
    <formula>ReadyToBillDate__c -  ProjectStart__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book to Bill Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>