force-app/main/default/objects/TASKRAY__Project__c/fields/Closed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Closed_Tasks__c</fullName>
    <label>Closed Tasks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>