force-app/main/default/objects/TASKRAY__Project__c/fields/ForecastDuration__c.field-meta.xml
<CustomField>
    <fullName>ForecastDuration__c</fullName>
    <formula>InstallationComplete__c - InstallationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>