force-app/main/default/objects/TASKRAY__Project__c/fields/InstallationComplete__c.field-meta.xml
<CustomField>
    <fullName>InstallationComplete__c</fullName>
    <label>Installation Complete</label>
    <type>Date</type>
</CustomField>