force-app/main/default/objects/TASKRAY__Project__c/fields/NetworkMilestone__c.field-meta.xml
<CustomField>
    <fullName>NetworkMilestone__c</fullName>
    <label>Network Milestone</label>
    <type>Date</type>
</CustomField>