force-app/main/default/objects/TASKRAY__Project__c/fields/ProjectAcceptedMilestone__c.field-meta.xml
<CustomField>
    <fullName>ProjectAcceptedMilestone__c</fullName>
    <label>Project Accepted Milestone</label>
    <type>Date</type>
</CustomField>