force-app/main/default/objects/TASKRAY__Project__c/fields/ProjectCompleteMilestone__c.field-meta.xml
<CustomField>
    <fullName>ProjectCompleteMilestone__c</fullName>
    <label>Project Complete Milestone</label>
    <type>Date</type>
</CustomField>