force-app/main/default/objects/TASKRAY__Project__c/fields/ProjectStart__c.field-meta.xml
<CustomField>
    <fullName>ProjectStart__c</fullName>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>