force-app/main/default/objects/TASKRAY__Project__c/fields/ProvisionedMilestone__c.field-meta.xml
<CustomField>
    <fullName>ProvisionedMilestone__c</fullName>
    <label>Provisioned Milestone</label>
    <type>Date</type>
</CustomField>