force-app/main/default/objects/TASKRAY__Project__c/fields/RelatedIST__c.field-meta.xml
<CustomField>
    <fullName>RelatedIST__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related IST</label>
    <referenceTo>Implementation_Services__c</referenceTo>
    <relationshipLabel>TaskRay Projects</relationshipLabel>
    <relationshipName>TaskRay_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>