force-app/main/default/objects/TASKRAY__Project__c/fields/SalesEngineer__c.field-meta.xml
<CustomField>
    <fullName>SalesEngineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TaskRay_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>