force-app/main/default/objects/TASKRAY__Project__c/fields/SurveySentMilestone__c.field-meta.xml
<CustomField>
    <fullName>SurveySentMilestone__c</fullName>
    <label>Survey Sent Milestone</label>
    <type>Date</type>
</CustomField>