force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__ChatterGroupSharingIds__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__ChatterGroupSharingIds__c</fullName>
    <label>Share to Chatter Groups (ID)</label>
    <type>TextArea</type>
</CustomField>