force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__ChatterGroupSharingNames__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__ChatterGroupSharingNames__c</fullName>
    <label>Share to Chatter Groups (Name)</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>