force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__Project_Start__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Project_Start__c</fullName>
    <description>Used to track the date of when the project is scheduled to start.</description>
    <inlineHelpText>Date of when the project is scheduled to start.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>