force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__TextColor__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__TextColor__c</fullName>
    <label>Deprecated (Do Not Use)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>