force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trAccount__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TaskRay Projects</relationshipLabel>
    <relationshipName>trProjectAccount</relationshipName>
    <type>Lookup</type>
</CustomField>