force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trActualDuration__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trActualDuration__c</fullName>
    <description>Used to track the number of days that it actually took to complete the project. Calculated as the difference between the project Start Date and the project Actual Completion Date.</description>
    <formula>IF(
    (TASKRAY__trActualCompletionDate__c - TASKRAY__Project_Start__c + 1) &gt; 0,
    TASKRAY__trActualCompletionDate__c - TASKRAY__Project_Start__c + 1,
    null
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days that it took to complete the project.</inlineHelpText>
    <label>Actual Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>