force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trAvailableExternal__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trAvailableExternal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows Sites guest users access to the project</description>
    <label>Available for External Sharing</label>
    <type>Checkbox</type>
</CustomField>