force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trBusinessHours__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trBusinessHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines project’s default business hour availability. Tasks will not be scheduled for any days designated as non-working days.</description>
    <label>Project Schedule</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>TaskRay_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>