force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trCompletionPercentage__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trCompletionPercentage__c</fullName>
    <label>Progress</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>