force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trEstimatedDuration__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trEstimatedDuration__c</fullName>
    <description>Used to track the estimated number of days that it should take to complete the project as scheduled. Calculated as the difference between the project Start Date and the project Estimated End Date.</description>
    <formula>IF( 
(TASKRAY__Project_End__c - TASKRAY__Project_Start__c + 1) &gt; 0, 
TASKRAY__Project_End__c - TASKRAY__Project_Start__c + 1, 
null 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated number of days that it should take to complete the project as scheduled.</inlineHelpText>
    <label>Estimated Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>