force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trEstimatedHours__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trEstimatedHours__c</fullName>
    <label>Estimated Time (hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>