force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trExternalFeedback__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trExternalFeedback__c</fullName>
    <description>External feedback about a customer&apos;s onboarding experience.</description>
    <inlineHelpText>Use this field to capture external feedback about a customer&apos;s onboarding experience.</inlineHelpText>
    <label>External Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>