force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trGenerateOnboardingFeedbackForm__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trGenerateOnboardingFeedbackForm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Generates a link to the TaskRay Onboarding Feedback Form which can be shared with a customer to capture their external feedback and sentiment.</description>
    <inlineHelpText>Use this to generate the Onboarding Feedback Form Link which can be shared with a customer to capture their external feedback and sentiment.</inlineHelpText>
    <label>Generate Onboarding Feedback Form</label>
    <type>Checkbox</type>
</CustomField>