force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trInternalSentiment__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trInternalSentiment__c</fullName>
    <description>The internal sentiment of a customer onboarding project based on a satisfaction score.</description>
    <inlineHelpText>Use this field to capture the internal sentiment of a customer onboarding project.</inlineHelpText>
    <label>Internal Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Very Unsatisfied</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Unsatisfied</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Satisfied</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Very Satisfied</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>