force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trNickname__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trNickname__c</fullName>
    <label>Nickname</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>