force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trOnboardingFeedbackFormLink__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trOnboardingFeedbackFormLink__c</fullName>
    <description>A link to the TaskRay Onboarding Feedback Form which can be shared with a customer to capture their external feedback and sentiment.</description>
    <formula>IF(TASKRAY__trGenerateOnboardingFeedbackForm__c, 

HYPERLINK($Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trFormsPublicSiteURL__c+&#39;?flowname=&#39;+$Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trOnboardingFeedbackFlow__c+&#39;&amp;projectId=&#39;+ Id, 

&quot;Link to Form&quot;) 

,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A link to the TaskRay Onboarding Feedback Form which can be shared with a customer to capture their external feedback and sentiment.</inlineHelpText>
    <label>Onboarding Feedback Form Link</label>
    <type>Text</type>
</CustomField>