force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trOnboardingSummaryNotes__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trOnboardingSummaryNotes__c</fullName>
    <description>Key information about a customer&apos;s onboarding that can be referenced throughout the customer&apos;s lifecycle.</description>
    <inlineHelpText>Use this field to store key information about a customer&apos;s onboarding that can be referenced throughout the customer&apos;s lifecycle.</inlineHelpText>
    <label>Onboarding Summary Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>