force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trTemplate__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>