force-app/main/default/objects/TASKRAY__Project__c/fields/TASKRAY__trTemplateLibrarySource__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTemplateLibrarySource__c</fullName>
    <label>TaskRay Template Library Source</label>
    <length>128</length>
    <type>Text</type>
</CustomField>