force-app/main/default/objects/TASKRAY__Project__c/fields/UATCompletedMilestone__c.field-meta.xml
<CustomField>
    <fullName>UATCompletedMilestone__c</fullName>
    <label>UAT Completed Milestone</label>
    <type>Date</type>
</CustomField>