force-app/main/default/objects/TASKRAY__Project__c/validationRules/TASKRAY__Completing_Project_Restricted_to_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>TASKRAY__Completing_Project_Restricted_to_Owner</fullName>
    <active>false</active>
    <errorConditionFormula>AND($User.Id !=  OwnerId ,ISCHANGED(TASKRAY__trCompleted__c),TASKRAY__trCompleted__c)</errorConditionFormula>
    <errorMessage>Only the Project Owner can mark the project as completed. Contact your system administrator if you would like access to this functionality.</errorMessage>
</ValidationRule>