force-app/main/default/objects/TASKRAY__Project__c/validationRules/TASKRAY__Editing_Score_Restricted_to_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>TASKRAY__Editing_Score_Restricted_to_Owner</fullName>
    <active>false</active>
    <description>This validation rule prevents anyone except the project owner from modifying the Customer Onboarding Score.</description>
    <errorConditionFormula>AND( 
ISCHANGED( TASKRAY__trCustomerOnboardingScore__c ), 
NOT(ISBLANK(PRIORVALUE(TASKRAY__trCustomerOnboardingScore__c))), 
$User.Id != OwnerId 
)</errorConditionFormula>
    <errorMessage>Only the Project Owner can edit the Customer Onboarding Score. Contact your system administrator if you would like access to this field.</errorMessage>
</ValidationRule>