force-app/main/default/objects/TASKRAY__Project__c/validationRules/TASKRAY__External_Sharing_Restricted_to_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>TASKRAY__External_Sharing_Restricted_to_Owner</fullName>
    <active>false</active>
    <description>This validation rule prevents anyone except the project owner from making a project available for external users</description>
    <errorConditionFormula>ISCHANGED( TASKRAY__trAvailableExternal__c ) &amp;&amp;
TASKRAY__trAvailableExternal__c == true &amp;&amp;
$User.Id !=  OwnerId</errorConditionFormula>
    <errorMessage>Only the Project Owner can make the project available for external sharing. Contact your system administrator if you would like access to this field.</errorMessage>
</ValidationRule>