force-app/main/default/objects/TASKRAY__Project__c/validationRules/TASKRAY__No_spaces_in_Nickname.validationRule-meta.xml
<ValidationRule>
    <fullName>TASKRAY__No_spaces_in_Nickname</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX( TASKRAY__trNickname__c  ,&quot;.*\\s+.*&quot;)</errorConditionFormula>
    <errorMessage>Project Nicknames cannot have spaces</errorMessage>
</ValidationRule>