force-app/main/default/objects/TASKRAY__Project__c/listViews/TASKRAY__AllProjects.listView-meta.xml
<ListView>
    <fullName>TASKRAY__AllProjects</fullName>
    <columns>NAME</columns>
    <columns>TASKRAY__Project_Start__c</columns>
    <columns>TASKRAY__Project_End__c</columns>
    <columns>TASKRAY__Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>