force-app/main/default/objects/TASKRAY__Project__c/listViews/TASKRAY__Archived_and_Templates.listView-meta.xml
<ListView>
    <fullName>TASKRAY__Archived_and_Templates</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>TASKRAY__Project_Start__c</columns>
    <columns>TASKRAY__Project_End__c</columns>
    <columns>TASKRAY__Status__c</columns>
    <columns>TASKRAY__trTemplate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASKRAY__Status__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASKRAY__trTemplate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Archived and Templates</label>
</ListView>