force-app/main/default/objects/TASKRAY__Project__c/listViews/trUnassigned_Project.listView-meta.xml
<ListView>
    <fullName>trUnassigned_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>TaskRay Unassigned</label>
    <queue>trUnassigned</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>